# ConcurrentBankingSystem

./: CMakeLists.txt  README.md
include/: accounts.h  common.h  ipc.h  transaction.h
src/: accounts.c  ipc.c  main.c  transaction.c
transactions/: transactions.txt
